예산 작동하도록 수정, 팝업 제작, 마커에 팝업 연결